--- a/src/systemd-watchdog.csproj
+++ b/src/systemd-watchdog.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>systemd-watchdog</AssemblyName>
+    <RootNamespace>systemd</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Reactive" Version="4.1.2" />
+  </ItemGroup>
 
 </Project>
