--- a/testservice/appsettings.json
+++ b/testservice/appsettings.json
@@ -7,7 +7,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "%PROGRAMDATA%\\ROADflow\\Logs\\SensorTestConsole.log",
+          "path": "SensorTestConsole.log",
           "rollOnFileSizeLimit": true,
           "fileSizeLimitBytes": 10000000,
           "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] [{SourceContext}] {Message}{NewLine}{Exception}"
